# individula_project_2

./: db.sqlite3  pyproject.toml
StudentManagementSystem/: settings.py
