[tool.poetry]
name = "studentmanagementsystem"
version = "0.1.0"
description = ""
authors = ["Ramazan Syrlybay <syrlybai056@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
django-rest-framework = "^0.1.0"
celery = "^5.4.0"
redis = "^5.2.0"
djoser = "^2.3.1"
django-redis = "^5.4.0"
drf-spectacular = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
